[project]
name = "recipe-recommender"
version = "0.1.0"
description = ""
authors = [
    {name = "Max Li",email = "143444069+notttired@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
